# Mushaffar-Portfolio

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: customers.rs  mock_data.rs  system.rs  users.rs
src-tauri/src/core/: db.rs  error.rs
src-tauri/src/services/: api_client.rs  local_api.rs
src/lib/components/Layout/: Header.svelte  Sidebar.svelte
src/lib/components/Views/: AnalyticsPanel.svelte  AuditTimeline.svelte  AuthPortal.svelte  DataGrid.svelte  DetailsDrawer.svelte  MockLogin.svelte  SettingsPanel.svelte
src/lib/stores/: appState.ts
