[package]
name = "local-data-manager"
version = "0.1.0"
description = "A Tauri v2 desktop portfolio prototype"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.3.1", features = [] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["net"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
