[package]
name = "local-data-manager"
version = "0.1.0"
description = "A Tauri v2 desktop portfolio prototype"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.3.1", features = [] }
